tables not rendering correctly

--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -5,3 +5,8 @@ title: hello world title
 # hello world
 
 This is a hello World mdx file
+
+| col1 | col2 |
+| ---- | ---- |
+| 1    | 2    |
+| 3    | 4    |
